LLM4Config/assets/osdfir-infrastructure_timesketch.yaml
---
# Source: timesketch/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-timesketch-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.3.2
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-timesketch
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: timesketch/charts/redis/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-timesketch-redis
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    helm.sh/chart: redis-19.3.2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-timesketch
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 6379
---
# Source: timesketch/charts/opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-cluster-master
  labels:
    helm.sh/chart: opensearch-2.20.0
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "2.14.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-cluster-master
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: my-timesketch
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: timesketch/charts/opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-cluster-master-headless
  labels:
    helm.sh/chart: opensearch-2.20.0
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "2.14.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-cluster-master
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like opensearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: my-timesketch
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
  - name: metrics
    port: 9600
---
# Source: timesketch/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.3.2
    app.kubernetes.io/component: primary
  annotations:
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: timesketch/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.3.2
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: timesketch/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-redis-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    helm.sh/chart: redis-19.3.2
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/name: redis
---
# Source: timesketch/charts/redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-redis-master
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    helm.sh/chart: redis-19.3.2
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master
---
# Source: timesketch/templates/metrics/web-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-frontend-metrics
  labels:
    helm.sh/chart: timesketch-1.0.6
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
    date: "2024-09-16"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
---
# Source: timesketch/templates/metrics/worker-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch-worker-metrics
  labels:
    helm.sh/chart: timesketch-1.0.6
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
    date: "2024-09-16"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: worker
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
---
# Source: timesketch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-timesketch
  namespace: "default"
  labels:
    helm.sh/chart: timesketch-1.0.6
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
    date: "2024-09-16"
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
---
# Source: timesketch/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-timesketch
  namespace: "default"
  labels:
    app.kubernetes.io/component: frontend
    helm.sh/chart: timesketch-1.0.6
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
    date: "2024-09-16"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/name: timesketch
      app.kubernetes.io/instance: my-timesketch
  template:
    metadata:
      annotations:
        # Have Deployment restart after each upgrade
        roll: "1dSLK" 
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/name: timesketch
        app.kubernetes.io/instance: my-timesketch
    spec:
      serviceAccountName: timesketch
      securityContext:
        {}
      containers:
        - name: frontend
          securityContext:
            {}
          image: "us-docker.pkg.dev/osdfir-registry/timesketch/timesketch:latest"
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "./docker-entrypoint.sh timesketch-web"]
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "tsctl create-user timesketch --password $TIMESKETCH_USER"]
          volumeMounts:
            - mountPath: "/mnt/timesketchvolume/upload"
              name: timesketchvolume
              subPath: uploads
            - mountPath: /var/log/timesketch
              name: timesketchvolume
              subPathExpr: logs/$(POD_NAME)
            - mountPath: /etc/timesketch
              name: timesketch-configs
          ports:
            - containerPort: 8080
            - containerPort: 5000
          resources:
            limits: {}
            requests: {}
      volumes:
        - name: timesketchvolume
          persistentVolumeClaim:
            claimName: timesketchvolume-claim
            readOnly: false
        - name: init-timesketch
          configMap:
            name: my-timesketch-init-configmap
            defaultMode: 0744
        - name: timesketch-configs
          emptyDir: {}
        - name: uploaded-configs
          configMap:
            name: my-timesketch-configmap
            optional: true
        - name: authenticated-emails
          secret:
            items:
            - key: authenticated-emails-list
              path: authenticated-emails-list
            secretName: my-timesketch-access-list
---
# Source: timesketch/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-timesketch-worker
  namespace: "default"
  labels:
    app.kubernetes.io/component: worker
    helm.sh/chart: timesketch-1.0.6
    app.kubernetes.io/name: timesketch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
    date: "2024-09-16"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/name: timesketch
      app.kubernetes.io/instance: my-timesketch
  template:
    metadata:
      annotations:
        # Have Deployment restart after each upgrade
        roll: "rF0q6" 
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/name: timesketch
        app.kubernetes.io/instance: my-timesketch
    spec:
      serviceAccountName: timesketch
      securityContext:
        {}
      containers:
        - name: worker
          securityContext:
            {}
          image: "us-docker.pkg.dev/osdfir-registry/timesketch/timesketch:latest"
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "./docker-entrypoint.sh timesketch-worker"]
          volumeMounts:
            - mountPath: "/mnt/timesketchvolume/upload"
              name: timesketchvolume
              subPath: uploads
            - mountPath: /var/log/timesketch
              name: timesketchvolume
              subPathExpr: logs/$(POD_NAME)
            - mountPath: /etc/timesketch
              name: timesketch-configs
          ports:
            - containerPort: 8080
            - containerPort: 5000
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: timesketchvolume
          persistentVolumeClaim:
            claimName: timesketchvolume-claim
            readOnly: false
        - name: init-timesketch
          configMap:
            name: my-timesketch-init-configmap
            defaultMode: 0744
        - name: timesketch-configs
          emptyDir: {}
        - name: uploaded-configs
          configMap:
            name: my-timesketch-configmap
            optional: true
        - name: authenticated-emails
          secret:
            items:
            - key: authenticated-emails-list
              path: authenticated-emails-list
            secretName: my-timesketch-access-list
---
# Source: timesketch/charts/opensearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-cluster-master
  labels:
    helm.sh/chart: opensearch-2.20.0
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/version: "2.14.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-cluster-master
  annotations:
    majorVersion: "2"
spec:
  serviceName: opensearch-cluster-master-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/instance: my-timesketch
  replicas: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: opensearch-cluster-master
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: "2Gi"
  template:
    metadata:
      name: "opensearch-cluster-master"
      labels:
        helm.sh/chart: opensearch-2.20.0
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/instance: my-timesketch
        app.kubernetes.io/version: "2.14.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: opensearch-cluster-master
      annotations:
        configchecksum: 281cbaf0c9ef3ef2f829c79352193fd584f9cb9709c234c9de523c8b5bc59a6
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - my-timesketch
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - opensearch
      terminationGracePeriodSeconds: 120
      volumes:
      - name: config
        configMap:
          name: opensearch-cluster-master-config
      - emptyDir: {}
        name: config-emptydir
      enableServiceLinks: true
      containers:
      - name: "opensearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000

        image: "opensearchproject/opensearch:2.14.0"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        - name: metrics
          containerPort: 9600
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - name: "opensearch-cluster-master"
          mountPath: /usr/share/opensearch/data
        - name: config-emptydir
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
---
# Source: timesketch/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-timesketch-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.3.2
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: my-timesketch-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-timesketch
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: my-timesketch-postgresql
      labels:
        app.kubernetes.io/instance: my-timesketch
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 16.3.0
        helm.sh/chart: postgresql-15.3.2
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: my-timesketch-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-timesketch
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:16.3.0-debian-12-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "dbname=timesketch" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "dbname=timesketch" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "2Gi"
---
# Source: timesketch/charts/redis/templates/master/application.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-timesketch-redis-master
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-timesketch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    helm.sh/chart: redis-19.3.2
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-timesketch
      app.kubernetes.io/name: redis
      app.kubernetes.io/component: master
  serviceName: my-timesketch-redis-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-timesketch
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: redis
        app.kubernetes.io/version: 7.2.4
        helm.sh/chart: redis-19.3.2
        app.kubernetes.io/component: master
      annotations:
        checksum/configmap: 86bcc953bb473748a3d3dc60b7c11f34e60c93519234d4c37f42e22ada559d47
        checksum/health: aff24913d801436ea469d8d374b2ddb3ec4c43ee7ab24663d5f8ff1a1b6991a9
        checksum/scripts: 560c33ff34d845009b51830c332aa05fa211444d1877d3526d3599be7543aaa5
        checksum/secret: 070c551edc3b4be39a1381f69d83e38406e8da9f0b1b576bd39211c4a24eca88
    spec:
      
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: my-timesketch-redis-master
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-timesketch
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/component: master
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      enableServiceLinks: true
      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: docker.io/bitnami/redis:7.2.4-debian-12-r16
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: empty-dir
              mountPath: /opt/bitnami/redis/etc/
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: start-scripts
          configMap:
            name: my-timesketch-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: my-timesketch-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: my-timesketch-redis-configuration
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: redis-data
        labels:
          app.kubernetes.io/instance: my-timesketch
          app.kubernetes.io/name: redis
          app.kubernetes.io/component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "2Gi"
